CHANGELOG
=========
3.4.2 (2018-05-15)
------------------

* [CHANGED] #5436 removed unsupported/unused plagiarism libs and calls


3.4.1 (2018-05-02)
------------------

* [FIXED] #5302 add missing language string for checkmark:manageoverrides
* [FIXED] #5421 fix broken course reset callback


3.4.0 (2018-01-27)
------------------

* Moodle 3.4 compatible version
* [FEATURE] #4894 added the ability to override time available, time due and cutoff-date for certain users or groups!
* [FIXED] #5048 added an event observer to update calendar events, if instance name is changed via inplace-editing on course page
* [FIXED] #4954 UI/UX regression causing only the current page to be exportable
* [FIXED] #4915 order examples fetched from DB by ID, this will hopefully resolve some strange ORDER issues on certain databases
* [CHANGED] #4954 show initial-bars even if all submissions are displayed on one page
* [UPDATE] #4830 use hideIf in moodleforms to enhance UX by hiding everything not really relevant
* various code improvements, removal of unused code, etc.


3.3.4 (2017-10-26)
------------------

* [FEATURE] #4399 quick-export templates to enable a reliable setting for exporting PDFs
* [FEATURE] #4331 setting to force name column to be written in one line in PDF exports
* [FIXED] #4330 UTF-8 symbols in examples' names wont get saved HTML-encoded
* [FIXED] #4860 replaced free text field for page size in submission view with select dropdown, due to huge page size values for
                submissions table caused core's tablelib to allocate huge amounts of memory
* [FIXED] #4867 fixed wrong order when grading single submissions via "next"/"previous"/"save and next"-buttons due to accessing
                settings in old unused memory places (possible regression of #3226)
* [CHANGED] separated submissions tab and export tab (URLs for export tab changed and no tab-parameter needed!)
* removal of unused code, small improvements, etc.


3.3.3 (2017-10-10)
------------------
